more fussing with that image

--- a/main.css
+++ b/main.css
@@ -44,11 +44,9 @@ body {
 	margin-bottom: 0px;
 }
 
-
 .about-img {
-	margin: 50px;
-	height: 50;
-	width: 50;
+	height: 250px;
+	width: 250px;
 }
 
 .about-body h2  {
