--- a/main.css
+++ b/main.css
@@ -44,9 +44,10 @@ body {
 	margin-bottom: 0px;
 }
 
-.about-img {
-	height: 250px;
-	width: 250px;
+.about-img img {
+	height: 450px;
+	width: 450px;
+	margin: 25px;
 }
 
 .about-body h2  {
