--- a/main.css
+++ b/main.css
@@ -67,33 +67,20 @@ body {
 	margin-bottom: 50px;
 }
 
-
-/*About*/
-
-
-.about-img img {
-	height: 500px;
-	width: 500px;
-	margin: 25px;
-}
-
-.about-body h2  {
-	font-size: 42px;
-	text-transform: uppercase;
-}
-
-.about-body p1 {
-	font-weight: bold;
-	font-family: 'Helvetica';
-}
-
-.about-body {
-	font-size: 18px;
-	margin: 50px;
+.contact-body {
+	color: #54b4ff;
 }
 
 .main-footer {
-	color: #d9d9d9;
-	font-size: 16px;
-	margin-top: 75px;
+	color: #bfbfbf;
+	font-size: 10px;
+	font-weight: bold;
+	margin-top: 250px;
+	margin-bottom: 50px;
+}
+
+/*Findus*/
+
+
+
 }
