--- a/main.css
+++ b/main.css
@@ -67,16 +67,33 @@ body {
 	margin-bottom: 50px;
 }
 
+.findus-body p {
+	color: #54b4ff;
+	font-size: 20px;
+	font-weight: bold;
+	font-family: 'Open Sans';
+	margin-top: 50px;
+	margin-bottom: 20px;
+}
+
+.map-widget iframe
+{
+	background-color: #54b4ff;
+	padding: 10px;
+	margin-bottom: 50px;
+}
+
 .contact-body {
 	color: #54b4ff;
 }
 
 .main-footer {
-	color: #bfbfbf;
-	font-size: 10px;
-	font-weight: bold;
-	margin-top: 250px;
-	margin-bottom: 50px;
+	color: #9f9f9f;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+		font-size: 10px;
+		font-weight: bold;
 }
 
 /*Findus*/
