--- a/main.css
+++ b/main.css
@@ -94,21 +94,48 @@ body {
 .map-widget iframe
 {
 	background-color: #54b4ff;
+	border-radius: 4px;
 	padding: 10px;
 	margin-bottom: 50px;
 }
 
 /*Contact*/
 
-.contact-body table {
-	background-color: #54b4ff;
-	padding: 10px;
-	resize: none;
+input[type=text], select, textarea {
+    width: 90%;
+    padding: 10px;
+    border: #54b4ff;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    resize: vertical;
 }
 
-.twitter-timeline {
-	background-color: #54b4ff;
-	padding: 10px;
+input[type=submit] {
+		font-family: 'Chewy';
+		font-size: 30px;
+    background-color: #008fff;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #000000;
+}
+
+/* Add a background color and some padding around the form */
+.contact-form {
+		display: inline-block;
+		text-align: center;
+    border-radius: 5px;
+    background-color: #54b4ff;
+		width: 500px;
+    padding: 10px;
+		margin-bottom: 25px;
 }
 
 .main-footer {
