--- a/main.css
+++ b/main.css
@@ -1,35 +1,72 @@
 
+/* NOTE: General Body */
+
 body {
-	color: #000000;
+	color: #54b4ff;
 	text-align: center;
 	font-family: 'Open Sans';
 }
 
 
-/*Main*/
+/* NOTE: Main Navigation */
 
-
-.main-nav {
-	overflow: hidden;
-	background-color: #54b4ff;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #54b4ff;
 }
 
-.main-nav li {
+li {
 		display: inline;
-		font-size: 24px;
+}
+
+li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+		text-decoration: none;
+    padding: 14px 16px;
 		text-transform: uppercase;
 }
 
-.main-nav li a {
-		color: #fff;
-    padding: 25px;
-    text-align: center;
-    text-decoration: none;
-}
-
-.main-nav li a:hover {
+li a:hover, .dropdown:hover .dropbtn {
     background-color: #008fff;
 }
+
+li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+		background-color: #008fff;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+	background-color: #0078d6;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+
+/* NOTE: Home Page */
+
 
 .main-title h1 {
 	color: #54b4ff;
@@ -43,7 +80,7 @@ body {
 .other-title h1 {
 	font-size: 100px;
 	font-weight: bold;
-	font-family: 'Helvetica';
+	font-family: 'Open Sans';
 	text-transform: uppercase;
 	margin-top: 25px;
 	margin-bottom: 0px;
@@ -106,6 +143,7 @@ input[type=text], select, textarea {
     padding: 10px;
     border: #54b4ff;
     border-radius: 4px;
+		font-family: 'Open Sans';
     box-sizing: border-box;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -124,10 +162,9 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    background-color: #000000;
+    background-color: #0078d6;
 }
 
-/* Add a background color and some padding around the form */
 .contact-form {
 		display: inline-block;
 		text-align: center;
