--- a/main.css
+++ b/main.css
@@ -71,9 +71,8 @@ li.dropdown {
 
 .main-title h1 {
 	color: #54b4ff;
-	font-size: 80px;
-	font-weight: bold;
-	font-family: 'Chewy', sans-serif;
+	font-size: 75px;
+	font-family: 'Fredoka One';
 	margin-top: 50px;
 	margin-bottom: 50px;
 }
@@ -95,26 +94,22 @@ li.dropdown {
 	font-family: 'Open Sans';
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 50px;
+	margin-top: 20px;
 	margin-bottom: 50px;
 }
 
-.main-tagline p1 {
+.main-tagline {
 	color: #54b4ff;
 	font-size: 50px;
-	font-weight: bold;
-	font-family: 'Chewy';
-	margin-top: 100px;
-	padding-bottom: 100px;
+	font-family: 'Fredoka One';
+	margin-top: 50px;
 }
 
-.main-tagline p2 {
+.sub-tagline {
 	color: #54b4ff;
 	font-size: 30px;
-	font-style: italic;
-	font-family: 'Chewy';
-	margin-top: 100px;
-	margin-bottom: 100px;
+	font-family: 'Fredoka One';
+	padding-bottom: 100px;
 }
 
 
@@ -153,8 +148,8 @@ input[type=text], select, textarea {
 }
 
 input[type=submit] {
-		font-family: 'Chewy';
-		font-size: 30px;
+		font-family: 'Open Sans';
+		font-size: 20px;
     background-color: #008fff;
     color: white;
     padding: 12px 20px;
