--- a/main.css
+++ b/main.css
@@ -186,9 +186,10 @@ input[type=submit]:hover {
 	color: #9f9f9f;
 	background-color: #fff;
     position: fixed;
+		margin-bottom: 10px;
     bottom: 0;
     width: 100%;
-		font-size: 10px;
+		font-size: 12px;
 		font-weight: bold;
 }
 
