--- a/main.css
+++ b/main.css
@@ -44,6 +44,7 @@ li.dropdown {
 .dropdown-content {
     display: none;
     position: absolute;
+		font-size: 16px;
 		background-color: #008fff;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -137,24 +138,25 @@ li.dropdown {
 
 input[type=text], select, textarea {
     width: 90%;
-    padding: 10px;
-    border: #54b4ff;
-    border-radius: 4px;
 		font-family: 'Open Sans';
     box-sizing: border-box;
     margin-top: 10px;
     margin-bottom: 10px;
+    padding: 10px;
+		border: none;
+    border-radius: 8px;
     resize: vertical;
 }
 
 input[type=submit] {
+		color: white;
 		font-family: 'Open Sans';
 		font-size: 20px;
+		text-transform: uppercase;
     background-color: #008fff;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
+    padding: 10px 20px;
+		border: none;
+    border-radius: 8px;
     cursor: pointer;
 }
 
@@ -162,13 +164,17 @@ input[type=submit]:hover {
     background-color: #0078d6;
 }
 
+input[type=submit]:active {
+	border-radius: 15px;
+}
+
 .contact-form {
 		display: inline-block;
 		text-align: center;
-    border-radius: 5px;
+    border-radius: 20px;
     background-color: #54b4ff;
 		width: 500px;
-    padding: 10px;
+    padding: 15px;
 		margin-bottom: 100px;
 }
 
