--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 body {
 	color: #54b4ff;
 	text-align: center;
-	font-family: 'Open Sans';
+	font-family: 'Helvetica';
 }
 
 
@@ -70,7 +70,7 @@ li.dropdown {
 
 /* NOTE: Home Page */
 
-.main-title h1 {
+.main-title {
 	color: #54b4ff;
 	font-size: 75px;
 	font-family: 'Fredoka One';
@@ -78,19 +78,10 @@ li.dropdown {
 	margin-bottom: 50px;
 }
 
-.other-title h1 {
-	font-size: 100px;
-	font-weight: bold;
-	font-family: 'Open Sans';
-	text-transform: uppercase;
-	margin-top: 25px;
-	margin-bottom: 0px;
-}
-
 .main-body {
 	width: 600px;
 	color: #54b4ff;
-	font-size: 18px;
+	font-size: 20px;
 	font-weight: bold;
 	font-family: 'Open Sans';
 	margin-left: auto;
